# JsonParser

./: .gitignore  CMakeLists.txt  README.md  app_config.json  exported_document.json
.github/workflows/: benchmark.yml  build.yml  clang-format.yml  clang-tidy.yml  coverage.yml  docs.yml  packaging.yml  release.yml  sanitizers.yml  update.yml
benchmarks/: CMakeLists.txt  bench_all.cpp  benchmarks.cpp
benchmarks/baselines/: v1.0.0.json  v1.0.0.md
benchmarks/common/: export.h  framework.h  helper.h  macros.h  registry.h
benchmarks/core/: comparison.cpp  navigation.cpp
benchmarks/parsing/: parsing_structural.cpp
benchmarks/results/: benchmark_results.json  benchmark_results.md  regression_results.json  regression_results.md
benchmarks/serialization/: serialization.cpp
benchmarks/suite/access/: element_access.cpp  lookup.cpp  value_access.cpp
benchmarks/suite/core/: parsing.cpp  parsing_scalars.cpp  parsing_strings.cpp  round_trip.cpp  serialization.cpp
benchmarks/suite/lifecycle/: construction.cpp  copy.cpp  destruction.cpp  move.cpp
benchmarks/suite/scaling/: deep_nesting.cpp  large_array.cpp  large_object.cpp  wide_object.cpp
benchmarks/suite/utility/: comparison.cpp  size_and_capacity.cpp  type_inspection.cpp
benchmarks/utils/: Table.h  Table.tpp
cmake/: JsonProConfig.cmake.in
docs/: Doxyfile  PACKAGING.md
examples/: CMakeLists.txt  example_all.cpp  examples.cpp
examples/common/: helper.h  registry.h
examples/suite/advanced/: move_semantics.cpp  object_internals.cpp  parse_error_detail.cpp  reserve_capacity.cpp
examples/suite/integration/: config_loaders.cpp  export.cpp  stl_containers.cpp  struct_conversion.cpp
examples/suite/misuse/: const_access_gotcha.cpp  error_handling.cpp  malformed_input.cpp  nonfinite_dump.cpp  wrong_type_access.cpp
examples/suite/patterns/: builder_helpers.cpp  lookup_by_view.cpp  merge_objects.cpp  modify_reserialize.cpp  navigating_documents.cpp
examples/suite/pitfall/: error_handling.cpp
examples/suite/quickstart/: basic_usage.cpp  building_documents.cpp  export.cpp  navigating_documents.cpp
examples/usage/: building_documents.cpp
include/: Json.h  Parser.h
include/JsonPro/: Json.h  JsonException.h  JsonObject.h  Parser.h
recipes/jsonpro/all/: conandata.yml  conanfile.py
recipes/jsonpro/all/test_package/: CMakeLists.txt
recipes/jsonpro/all/test_package/src/: test_package.cpp
scripts/: update_package_files.py
src/: Json.cpp  Parser.cpp
src/JsonPro/: Json.cpp  JsonObject.cpp  Parser.cpp
tests/: CMakeLists.txt  test.cpp  test_all.cpp
tests/common/: framework.h  helper.h  macros.h  registry.h
tests/core/: navigation.cpp  utilities.cpp  value_access.cpp
tests/parsing/: parsing_scalars.cpp  parsing_strings.cpp
tests/suite/concurrency/: concurrent_reads.cpp  independent_instances.cpp  parallel_parsing.cpp
tests/suite/integration/: document_building.cpp  error_propagation.cpp  nested_navigation.cpp  parse_roundtrip.cpp
tests/suite/lifecycle/: construction.cpp  copy_semantics.cpp  exception_safety.cpp  move_semantics.cpp  object_lifecycle.cpp
tests/suite/regression/: duplicate_keys.cpp  erase_reindex.cpp  leading_zeros.cpp  max_depth.cpp  nonfinite_numbers.cpp  surrogate_pairs.cpp  trailing_input.cpp
tests/suite/unit/: comparison.cpp  constructor.cpp  navigation.cpp  object_storage.cpp  parsing structural.cpp  scalar_parsing.cpp  serialization.cpp  strings_parsing.cpp  structural_parsing.cpp  type_inspection.cpp  utilities.cpp  value_access.cpp
tools/: CMakeLists.txt
tools/regression/: export.h  helper.h  regression.cpp
vcpkg-smoke-test/: CMakeLists.txt  vcpkg.json
vcpkg-smoke-test/src/: smoke_test.cpp
vcpkg/ports/jsonpro/: portfile.cmake  vcpkg.json
